@@ -84,7 +84,8 @@ public:
 	virtual Gump_button *on_button(Game_window *gwin, int mx, int my);
 					// Paint button.
 	virtual int add(Game_object *obj, int mx = -1, int my = -1,
-			int sx = -1, int sy = -1, bool dont_check = false);
+			int sx = -1, int sy = -1, bool dont_check = false,
+						bool combine = false);
 	virtual void remove(Game_object *obj);
 					// Paint it and its contents.
 	virtual void paint(Game_window *gwin);
